// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/FormRadioGroup Compact 1`] = `
<div
  className="fd-form-group"
>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio fd-radio--compact"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 1
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio fd-radio--compact"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 2
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio fd-radio--compact"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 3
    </label>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormRadioGroup Dev 1`] = `
<div
  className="fd-form-group"
>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 1
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 2
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 3
    </label>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormRadioGroup Disabled 1`] = `
<div
  className="fd-form-group"
>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      disabled={true}
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label is-disabled fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 1
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      disabled={true}
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label is-disabled fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 2
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      disabled={true}
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label is-disabled fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 3
    </label>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormRadioGroup Inline 1`] = `
<div
  className="fd-form-group fd-form-group--inline"
>
  <div
    className="fd-form-item fd-form-item--inline"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 1
    </label>
  </div>
  <div
    className="fd-form-item fd-form-item--inline"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 2
    </label>
  </div>
  <div
    className="fd-form-item fd-form-item--inline"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 3
    </label>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormRadioGroup No Styles 1`] = `
<div
  className="xxx-form-group"
>
  <div
    className="xxx-form-item"
    onChange={[Function]}
  >
    <input
      className="xxx-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="xxx-form-label xxx-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 1
    </label>
  </div>
  <div
    className="xxx-form-item"
    onChange={[Function]}
  >
    <input
      className="xxx-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="xxx-form-label xxx-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 2
    </label>
  </div>
  <div
    className="xxx-form-item"
    onChange={[Function]}
  >
    <input
      className="xxx-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="xxx-form-label xxx-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 3
    </label>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormRadioGroup Primary 1`] = `
<div
  className="fd-form-group"
>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 1
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 2
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Option 3
    </label>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormRadioGroup Validation States 1`] = `
<div
  className="fd-form-group"
>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Default
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio is-error"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Error
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio is-warning"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Warning
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio is-success"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Success
    </label>
  </div>
  <div
    className="fd-form-item"
    onChange={[Function]}
  >
    <input
      className="fd-radio is-information"
      id="fd-mocked-short-id"
      name="fd-mocked-short-id"
      type="radio"
    />
    <label
      className="fd-form-label fd-radio__label"
      htmlFor="fd-mocked-short-id"
    >
      Information
    </label>
  </div>
</div>
`;
